# Santa_Elena-Envio_Full_Set_a_Recibido

./: .gitignore  LICENSE.md  Plantilla_de_Configuracion.xlsx  README.md  lista_ejecucion.txt  main.py  pyproject.toml  requeriments.txt
documents/: FULL SET OF DOCS OE232400514- MSC BIANCA- METRO (ETA 20-05-2024- Container_ BMOU964791-5- PO 15398631).eml
documents/Carpetas/FULL SET OF DOCS OE232400007- MSC CASSANDRE- DIVINE (ETA 03-02-2024)/: PACKING LIST OE232400007_MSC CASSANDRE_DIVINE FLAVOR LLC.xls
documents/Carpetas/FULL SET OF DOCS OE232400514- MSC BIANCA- METRO  (ETA 20-05-2024- Container: BMOU964791-5- PO 15398631)/: PACKING LIST OE232400514_MSC BIANCA_METRO.xls
documents/Carpetas/FULL SET OF DOCS OE232400596 -OE232400597 -OE232400598 -OE232400599- MAERSK BULAN - TROPME (ETA 01-05-2024)/: PACKING LIST  - OE232400597_MAERSK BULAN_TROPME.xls  PACKING LIST - OE232400599_MAERSK BULAN_TROPME.xls
documents/google_drive/: README.md  __init__.py  drive_oauth.py  drive_upload.py  main.py
src/: main.py  main_bkp.py
src/configuration/: configuracion.yaml  configuracion_dev.yaml  configuracion_prod.yaml  credentials.json  token.json
src/models/: __init__.py  caso_exportacion.py  config_excel.py  config_yaml.py  replace_placeholders.py
src/modules/buscar_carpeta/: __init__.py  main.py
src/templates/: Envio_Informe.html  Envio_Informe_v0.html  Envio_Recibidor.html  Envio_Vacio.html
test/Configuracion/: FULL SET EMBARQUE A RECIBIDOR.xlsx  Plantilla_de_Configuracion.xlsx  ~$Plantilla_de_Configuracion.xlsx
tests/: conftest.py  test_drive_api.py
(+37 files in other folders)
